--- a/desktop.css
+++ b/desktop.css
@@ -49,6 +49,10 @@
 		flex-direction: row;
 	}
 
+	.boxes div:hover {
+		transform: scale(1.05);
+	}
+
 	.footer-container {
 		height: 100px;
 		color: white;
